# lib_dzne_filedata

./: README.md  README.rst  pyproject.toml
src/lib_dzne_filedata/: __init__.py
