[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib-dzne-filedata"
version = "0.2.0"
description = "Libary for filedata handling. "
license = { file = "LICENSE" }
authors = [{ name = "Johannes Horler", email = "johannes.horler@dzne.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "openpyxl>=3.1.1",
    "pandas>=1.5.3",
    "tomli_w>=1.0.0",
    "lib-dzne-seq>=0.2.0",
    "lib-dzne-basetables>=0.1.1",
    "lib-dzne-tsv>=0.1.6",
    "lib-dzne-math>=0.2.0",
]
requires-python = ">=3.11"

