[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lib_dzne_filedata"
version = "0.5.1"
description = "Libary for filedata handling. "
readme = "README.md"
authors = [{ name = "Johannes", email = "johannes-programming@posteo.org" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "tomli_w>=1.0.0",
    "lib_dzne_math>=0.2.3",
]
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/lib-dzne-filedata/#files"
Source = "https://github.com/johannes-programming/lib_dzne_filedata"

